{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 16,
  "lineage": "a9697fec-0c8e-6070-c833-fa6364e9a98a",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654423131:vpc/vpc-085aae727fbfc39c5",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0ccd5b09c33bd60fb",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0c7d5af66fbc5da93",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-085aae727fbfc39c5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-014b1de9ad9b836da",
            "owner_id": "654654423131",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0fb0b230890ccd1e6",
            "arn": "arn:aws:ec2:us-east-1:654654423131:instance/i-017857f37ac066b96",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-017857f37ac066b96",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-01b75a8abc2876034"
              }
            ],
            "primary_network_interface_id": "eni-01b75a8abc2876034",
            "private_dns": "ip-172-31-28-43.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.28.43",
            "public_dns": "ec2-98-93-65-203.compute-1.amazonaws.com",
            "public_ip": "98.93.65.203",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a3aecbe9254c5ea5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "BackendSG"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a4de963f213350de",
            "tags": {
              "Name": "BackEnd"
            },
            "tags_all": {
              "Name": "BackEnd"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-07b5a3302cbb603da"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "i-017857f37ac066b96",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.Backend",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0fb0b230890ccd1e6",
            "arn": "arn:aws:ec2:us-east-1:654654423131:instance/i-0a07a4174dfbbb9e3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a07a4174dfbbb9e3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b9f0c29c30c45685"
              }
            ],
            "primary_network_interface_id": "eni-0b9f0c29c30c45685",
            "private_dns": "ip-172-31-30-14.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.30.14",
            "public_dns": "ec2-3-88-233-47.compute-1.amazonaws.com",
            "public_ip": "3.88.233.47",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e42a9c60939693f4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "FrontendSG"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a4de963f213350de",
            "tags": {
              "Name": "FrontEnd"
            },
            "tags_all": {
              "Name": "FrontEnd"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-048228a0db9850431"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "i-0a07a4174dfbbb9e3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_instance.Backend",
            "aws_security_group.Backend",
            "aws_security_group.Frontend",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654423131:security-group/sg-07b5a3302cbb603da",
            "description": "Security Group for BackEnd",
            "egress": [],
            "id": "sg-07b5a3302cbb603da",
            "ingress": [],
            "name": "BackendSG",
            "name_prefix": "",
            "owner_id": "654654423131",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-085aae727fbfc39c5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "sg-07b5a3302cbb603da",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654423131:security-group/sg-048228a0db9850431",
            "description": "Security Group for FrontEnd",
            "egress": [],
            "id": "sg-048228a0db9850431",
            "ingress": [],
            "name": "FrontendSG",
            "name_prefix": "",
            "owner_id": "654654423131",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-085aae727fbfc39c5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "sg-048228a0db9850431",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654423131:security-group/sg-0d881cbe5f5fb5147",
            "description": "Allow SSH trafics",
            "egress": [],
            "id": "sg-0d881cbe5f5fb5147",
            "ingress": [],
            "name": "ssh-demo",
            "name_prefix": "",
            "owner_id": "654654423131",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-085aae727fbfc39c5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "sg-0d881cbe5f5fb5147",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "backend_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654423131:security-group-rule/sgr-0995a7260de561cb0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0995a7260de561cb0",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-07b5a3302cbb603da",
            "security_group_rule_id": "sgr-0995a7260de561cb0",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "sgr-0995a7260de561cb0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.Backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "frontend_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654423131:security-group-rule/sgr-08ec75d8fe6314dbd",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-08ec75d8fe6314dbd",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-048228a0db9850431",
            "security_group_rule_id": "sgr-08ec75d8fe6314dbd",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "sgr-08ec75d8fe6314dbd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.Frontend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "backend_http_from_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654423131:security-group-rule/sgr-0234816bab5cbff4a",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0234816bab5cbff4a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-048228a0db9850431",
            "region": "us-east-1",
            "security_group_id": "sg-07b5a3302cbb603da",
            "security_group_rule_id": "sgr-0234816bab5cbff4a",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "sgr-0234816bab5cbff4a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.Backend",
            "aws_security_group.Frontend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "backend_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654423131:security-group-rule/sgr-0cc3d6d02fcd4e83b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0cc3d6d02fcd4e83b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-07b5a3302cbb603da",
            "security_group_rule_id": "sgr-0cc3d6d02fcd4e83b",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "sgr-0cc3d6d02fcd4e83b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.Backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "frontend_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654423131:security-group-rule/sgr-05a3c5ef270b4c339",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-05a3c5ef270b4c339",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-048228a0db9850431",
            "security_group_rule_id": "sgr-05a3c5ef270b4c339",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "sgr-05a3c5ef270b4c339",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.Frontend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "frontend_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654423131:security-group-rule/sgr-00d40cfc034423827",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-00d40cfc034423827",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-048228a0db9850431",
            "security_group_rule_id": "sgr-00d40cfc034423827",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "sgr-00d40cfc034423827",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.Frontend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654423131:security-group-rule/sgr-07b0f586f70520829",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-07b0f586f70520829",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0d881cbe5f5fb5147",
            "security_group_rule_id": "sgr-07b0f586f70520829",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "sgr-07b0f586f70520829",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ssh"
          ]
        }
      ]
    }
  ]
}